--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bridging BPJS Apotek Online</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="Bridging BPJS Apotek Online" />
     <meta name="author" content="Basoro" />
 
